[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "koilang"
description = "Python binding for Koilang"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "typing-extensions>=4.5.0",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "koilang.core"

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pytest>=9.0.2",
]
